--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,7 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
-name: Python package
+name: build
 
 on:
   push:
@@ -35,6 +32,6 @@ jobs:
         flake8 sqlfs . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 sqlfs . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Build and test
+    - name: Build and run unit tests
       run: |
         python setup.py test
